<resources>
    <string name="app_name"  translatable="false">todo1test</string>
    <string name="cop"  translatable="false">COP</string>
    <string name="usd"  translatable="false">USD</string>
    <string name="error" translatable="false">Error</string>
    <string name="sign_in">Sign in</string>
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="no_internet_access">No internet access</string>
    <string name="firebase_password_invalid">The password is invalid or the user does not have a password</string>
    <string name="balance">Balance</string>
    <string name="generate_qr">Generate QR</string>
    <string name="transfer">Transfer</string>
    <string name="firebase_user_invalid">There is no user record corresponding to this identifier. The user may have been deleted</string>
    <string name="location_permission_needed">The location permission is needed to show the weather</string>
    <string name="email" translatable="false">Email</string>
</resources>
