<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_minimum_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<com.jose.herrera.todo1test.view.views.AppTitleValueTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="@dimen/activity_minimum_margin"
    android:id="@+id/from"/>
    <com.jose.herrera.todo1test.view.views.AppTitleValueTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/to"
        android:layout_marginBottom="@dimen/activity_minimum_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from"
        />
    <com.jose.herrera.todo1test.view.views.AppTextInputLayout
        android:layout_width="0dp"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/to"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="@dimen/activity_minimum_margin"
        android:layout_height="wrap_content"
        android:id="@+id/amountInputContainer">
        <com.jose.herrera.todo1test.view.views.AppEditText
            android:layout_width="match_parent"
            android:hint="@string/amount"
            android:maxLines="1"
            android:id="@+id/field_amount"
            android:inputType="number"
            android:imeOptions="flagNoExtractUi|actionDone"
            android:layout_height="wrap_content"
            />
    </com.jose.herrera.todo1test.view.views.AppTextInputLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cop"
        android:text="@string/cop"
        android:onClick="onCurrencyClick"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintTop_toBottomOf="@id/to"
        app:layout_constraintLeft_toRightOf="@id/amountInputContainer"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/usd"
        android:text="@string/usd"
        android:onClick="onCurrencyClick"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintTop_toBottomOf="@id/to"
        app:layout_constraintLeft_toRightOf="@id/cop"
        />
    <Button
        android:id="@+id/transferCompleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountInputContainer"
        android:text="@string/transfer"
        android:onClick="onTransferClicked"
        android:theme="@style/ThemeOverlay.MyDarkButton" />

</android.support.constraint.ConstraintLayout>